Fix style issue of backdrop on safari

--- a/app/assets/stylesheets/components/_nav.scss
+++ b/app/assets/stylesheets/components/_nav.scss
@@ -13,5 +13,6 @@
   .c-nav--primary {
     background: var(--nav-backdrop-bg-color);
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
   }
 }
